tests/sources/invalid/control_flow/for_in_extra_tokens.fire
// for-in header with extra tokens after the collection expression instead
// of the closing ')'.
fn main() -> int32 {
    arr: int32[] = [1, 2, 3];
    for (i: int32 in arr, arr) {  //~ ERROR FS-PARSE-0010 @25
//~^ ERROR FS-PARSE-0010 @27
    }
    return 0;
}
